tests/ui/compile-fail/init/invalid_init.stderr
error[E0277]: the trait bound `impl pin_init::PinInit<Bar>: Init<Bar>` is not satisfied
  --> tests/ui/compile-fail/init/invalid_init.rs:19:16
   |
18 |       let _ = init!(Foo {
   |  _____________-
19 | |         bar <- Bar::new(),
   | |                ^^^^^^^^^^ the trait `Init<Bar>` is not implemented for `impl pin_init::PinInit<Bar>`
20 | |     });
   | |______- required by a bound introduced by this call
   |
   = help: the following other types implement trait `Init<T, E>`:
             ChainInit<I, F, T, E>
             Result<T, E>
